fix two scrollbars in code view

--- a/packages/amplication-client/src/Resource/code-view/CodeViewPage.scss
+++ b/packages/amplication-client/src/Resource/code-view/CodeViewPage.scss
@@ -13,7 +13,7 @@ $svg-img-height: 200px;
     border-radius: var(--default-border-radius);
     border: $border-black10;
     box-sizing: border-box;
-    overflow: auto;
+    overflow: hidden;
     height: 100%;
   }
 
